gcc/testsuite/rust/rustc/ui/parser/issues/issue-111148.rs
fn a<<i<Y<w<>#
// { dg-error "" "" { target *-*-* } .-1 }

